--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "init_db": "node config/init_db.js",
+    "create_tables": "node config/create_tables.js"
   },
   "author": "",
   "license": "MIT",
@@ -14,10 +16,9 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "express": "^4.17.1",
-    "express-validator": "^6.6.1",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "pg": "^8.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
