--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "matcha",
-  "version": "1.0.0",
-  "description": "dating web application",
-  "scripts": {
-    "dev": "concurrently \"cd backend && npm run server\" \"cd frontend && npm start\" ",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "concurrently": "^5.3.0"
-  }
+    "name": "matcha",
+    "version": "1.0.0",
+    "description": "dating web application",
+    "scripts": {
+        "dev": "concurrently \"cd backend && npm run server\" \"cd frontend && npm start\" ",
+        "create": "cd backend && npm run init_db && npm run create_tables",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "devDependencies": {
+        "concurrently": "^5.3.0"
+    },
+    "dependencies": {
+        "dotenv": "^8.2.0"
+    }
 }
