--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "init_db": "node config/init_db.js",
+    "setup": "node config/setup_db.js",
     "create_tables": "node config/create_tables.js"
   },
   "author": "",
