--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "dev": "concurrently \"cd backend && npm run server\" \"cd frontend && npm start\" ",
         "create": "cd backend && npm run init_db && npm run create_tables",
+        "setup": "cd backend && npm run setup",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
