feat: :green_heart: Add script to package json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "dating web application",
     "scripts": {
+        "init": "npm update && cd backend && npm update",
         "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm start\" ",
         "create": "cd backend && npm run init_db && npm run create_tables",
         "setup": "cd backend && npm run setup",
