build: :construction: Update all files in accordance to new structure

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "matcha_backend",
   "version": "1.0.0",
   "description": "dating website api",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "setup_db": "node config/setup_db.js",
     "drop_db": "node config/drop_db.js"
   },
