--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.20.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
-    "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.3"
   },
