--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "concurrently": "^5.3.0"
     },
     "dependencies": {
+        "axios": "^0.20.0",
         "dotenv": "^8.2.0"
     }
 }
