--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     },
     "dependencies": {
         "axios": "^0.20.0",
-        "dotenv": "^8.2.0"
+        "dotenv": "^8.2.0",
+        "fs": "0.0.1-security",
+        "regex": "^0.1.1"
     }
 }
