--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
     "query-string": "^6.13.1",
-    "regex": "^0.1.1"
+    "regex": "^0.1.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
