--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "axios": "^0.20.0",
         "dotenv": "^8.2.0",
         "fs": "0.0.1-security",
-        "regex": "^0.1.1"
+        "regex": "^0.1.1",
+        "socket.io": "^2.3.0"
     }
 }
