--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
         "concurrently": "^5.3.0"
     },
     "dependencies": {
+        "@date-io/luxon": "^1.3.13",
+        "@material-ui/pickers": "^3.2.10",
         "axios": "^0.20.0",
         "dotenv": "^8.2.0",
         "fs": "0.0.1-security",
+        "luxon": "^1.25.0",
+        "react-country-region-selector": "^3.0.1",
         "regex": "^0.1.1",
         "socket.io": "^2.3.0"
     }
