--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     },
     "dependencies": {
         "@date-io/luxon": "^1.3.13",
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/pickers": "^3.2.10",
         "axios": "^0.20.0",
         "dotenv": "^8.2.0",
         "fs": "0.0.1-security",
         "luxon": "^1.25.0",
+        "material-ui-dropzone": "^3.5.0",
         "react-country-region-selector": "^3.0.1",
         "regex": "^0.1.1",
         "socket.io": "^2.3.0"
