--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "fontsource-roboto": "^3.0.3",
+    "material-ui-textfield-icon": "^0.2.8",
     "moment": "^2.28.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-infinite-scroll-component": "^5.1.0",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
