--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-infinite-scroll": "^1.0.9",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.0"
   },
