--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "countries-cities": "0.0.11",
     "fontsource-roboto": "^3.0.3",
     "material-ui-textfield-icon": "^0.2.8",
     "moment": "^2.28.0",
