--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^0.20.0",
         "classnames": "^2.2.6",
         "dotenv": "^8.2.0",
+        "faker": "^5.1.0",
         "luxon": "^1.25.0",
         "material-ui-dropzone": "^3.5.0",
         "material-ui-toggle-icon": "^1.1.1",
