feat: :zap: fake users with debugging

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "scripts": {
         "init": "npm install && cd backend && npm install && cd ../frontend && npm install",
         "dev": "concurrently \"cd backend && npm run dev\" \" cd frontend && npm start\" ",
-        "setup_db": "cd backend && npm run setup_db",
+        "setup_db": "cd backend && npm run setup_db && npm run fake_db ",
         "drop_db": "cd backend && npm run drop_db",
+        "fake_db": "cd backend && npm run fake_db",
         "client": "npm start --prefix frontend"
     },
     "keywords": [],
