--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "setup_db": "node config/setup_db.js",
-    "drop_db": "node config/drop_db.js"
+    "drop_db": "node config/drop_db.js",
+    "fake_db": "node config/fake_db.js"
   },
   "author": "",
   "license": "MIT",
