--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "countries-cities": "0.0.11",
     "fontsource-roboto": "^3.0.3",
     "material-ui-textfield-icon": "^0.2.8",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-infinite-scroll-component": "^5.1.0",
@@ -24,6 +25,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-infinite-scroll": "^1.0.9",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.1",
     "uuid": "^8.3.0"
   },
   "scripts": {
