--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "classnames": "^2.2.6",
         "dotenv": "^8.2.0",
         "faker": "^5.1.0",
+        "history": "^5.0.0",
         "luxon": "^1.25.0",
         "material-ui-dropzone": "^3.5.0",
         "material-ui-toggle-icon": "^1.1.1",
