--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@react-google-maps/api": "^1.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "countries-cities": "0.0.11",
     "fontsource-roboto": "^3.0.3",
+    "google-maps-react": "^2.0.6",
     "material-ui-textfield-icon": "^0.2.8",
     "moment": "^2.29.1",
     "react": "^16.13.1",
