--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.1.3",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
