--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.1.3",
+    "geoip-lite": "^1.4.2",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.11",
