fix: :bug: fixing filter bugs

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,12 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.22",
     "react-infinite-scroll-component": "^5.1.0",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.0",
     "react-virtual-list": "^2.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
