--- a/backend/package.json
+++ b/backend/package.json
@@ -20,11 +20,13 @@
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.1.3",
     "geoip-lite": "^1.4.2",
+    "google-auth-library": "^6.1.3",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
     "query-string": "^6.13.1",
+    "react-google-login": "^5.1.22",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
