refactor: :heavy_minus_sign: remove unused dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,33 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/luxon": "^2.10.6",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@react-google-maps/api": "^1.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "classnames": "^2.2.6",
     "countries-cities": "0.0.11",
-    "fontsource-roboto": "^3.0.3",
-    "google-maps-react": "^2.0.6",
-    "material-ui-textfield-icon": "^0.2.8",
+    "material-ui-dropzone": "^3.5.0",
+    "material-ui-toggle-icon": "^1.1.1",
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.22",
-    "react-infinite-scroll-component": "^5.1.0",
-    "react-moment": "^0.9.7",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
-    "react-virtual-list": "^2.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-infinite-scroll": "^1.0.9",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.1",
-    "uuid": "^8.3.0"
+    "socket.io-client": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
