--- a/backend/package.json
+++ b/backend/package.json
@@ -13,20 +13,20 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
-    "config": "^3.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.1.3",
+    "faker": "^5.1.0",
     "geoip-lite": "^1.4.2",
     "google-auth-library": "^6.1.3",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
-    "query-string": "^6.13.1",
-    "react-google-login": "^5.1.22",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
