--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "countries-cities": "0.0.11",
+    "luxon": "^1.25.0",
     "material-ui-dropzone": "^3.5.0",
     "material-ui-toggle-icon": "^1.1.1",
     "moment": "^2.29.1",
