--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "scripts": {
         "init": "npm run load && npm run geoip",
         "load": "npm install && cd backend && npm install && cd ../frontend && npm install",
-        "geoip": "cd backend/node_modules/geoip-lite && npm run-script updatedb license_key=$(cat ../../.env | grep GEOIP | cut -c7-)",
+        "geoip": "cd backend && npm run geoip",
         "start": "concurrently \"cd backend && npm start\" \" cd frontend && npm start\" ",
         "dev": "concurrently \"cd backend && npm run dev\" \" cd frontend && npm start\" ",
+        "prod": "cd frontend && npm run build && cd ../backend && npm start",
         "setup_db": "cd backend && npm run setup_db && npm run fake_db",
         "drop_db": "cd backend && npm run drop_db",
         "fake_db": "cd backend && npm run fake_db"
